--- a/doc/_release-notes/v0.12.0.md
+++ b/doc/_release-notes/v0.12.0.md
@@ -42,7 +42,7 @@ No changes.
 
 ##### Multibody Dynamics
 
-New features
+###### New features
 
 * Add MultibodyPlant reaction_forces output port ([#12123][_#12123])
 * Add MultibodyPlant generalized_contact_forces output port support when using continuous time ([#12162][_#12162])
@@ -53,7 +53,7 @@ New features
 * Add partial multibody geometry support for the capsule primitive, including urdf parsing ([#12254][_#12254]), sdf parsing with custom drake:capsule tag ([#12258][_#12258]), visualization ([#12235][_#12235]), and vtk and ospray sensor rendering ([#12293][_#12293], [#12305][_#12305])
 * Add partial multibody geometry support for the ellipsoid primitive ([#12256][_#12256], [#12323][_#12323])
 
-Fixes
+###### Fixes
 
 * Fix: Enforce sensible shape specifications ([#12172][_#12172])
 * Fix: Improve documentation of Jacobians ([#12135][_#12135], [#12192][_#12192]), SpatialAcceleration ([#12297][_#12297]), and model instances ([#12269][_#12269])
@@ -157,7 +157,7 @@ New hydroelastic contact model in progress ([#12102][_#12102], [#12114][_#12114]
 * @spruce BUILD label ([#12161][_#12161], [#12178][_#12178], [#12179][_#12179], [#12180][_#12180], [#12182][_#12182])
 * @stx BUILD label ([#12246][_#12246])
 
-Removal of deprecated APIs
+##### Removal of deprecated APIs
 
 * drake::SpatialForce ([#12301][_#12301])
   * Use Vector6<> instead.
