--- a/doc/_release-notes/v0.11.0.md
+++ b/doc/_release-notes/v0.11.0.md
@@ -44,7 +44,7 @@ This is the final release that will support Python 2, C++14, Ubuntu 16.04, or ma
 * ``systems.controllers.PidController`` ([#12020][_#12020], [#12030][_#12030])
 * ``systems.controllers.PidControlledSystem`` ([#12020][_#12020], [#12030][_#12030])
 
-Build system
+##### Build system
 
 * Suggest Bionic as our preference (not Xenial) ([#12074][_#12074])
 * Remove ``snopt`` support for upstream BUILD files ([#12098][_#12098])
@@ -53,7 +53,7 @@ Build system
 * Fix: Suppress "self-assign-overloaded" warnings for Apple LLVM >= 10.0.1 ([#12092][_#12092])
 * Permit downstream projects to use ``ExecuteExtraPythonCode`` ([#12000][_#12000])
 
-Dependencies
+###### Dependencies
 
 * Add ``ghc::filesystem`` as a new dependency ([#12106][_#12106], [#12116][_#12116])
 * Add ``suitesparse`` as a new dependency ([#12071][_#12071], [#12072][_#12072])
@@ -70,7 +70,7 @@ Dependencies
 * Update ``stx`` to latest commit ([#12014][_#12014])
 * Remove unused ``ignition_rndf`` dependency ([#12014][_#12014], [#12024][_#12024])
 
-Other
+##### Other
 
 * Update camera extrinsics in manipulation station class setup ([#12089][_#12089])
 * Draw body frames in meshcat visualizer ([#12090][_#12090])
@@ -84,7 +84,7 @@ Removal of deprecated APIs
 
 * ``MultibodyPlant::AddForceElement<UniformGravityFieldElement>`` ([#11987][_#11987])
 
-Binaries
+##### Binaries
 
 This release provides [pre-compiled binaries](https://github.com/RobotLocomotion/drake/releases/tag/v0.11.0)
 named ``drake-20191002-{bionic|xenial|mac}.tar.gz``. See
